--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^1.0.0",
     "apisauce": "^1.0.2",
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
@@ -21,10 +22,12 @@
     "react-native-axios": "^0.17.1",
     "react-native-camera-roll-picker": "^1.2.3",
     "react-native-charts": "^3.0.0",
+    "react-native-elements": "^1.0.0",
     "react-native-gesture-handler": "1.0.10",
     "react-native-image-crop-picker": "^0.22.0",
     "react-native-image-picker": "^0.28.0",
     "react-native-pure-chart": "0.0.24",
+    "react-native-range-slider": "^0.1.1",
     "react-native-responsive-dimensions": "^2.0.1",
     "react-native-responsive-fontsize": "^0.1.6",
     "react-native-responsive-screen": "^1.1.10",
