--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-native-gesture-handler": "1.0.10",
     "react-native-image-crop-picker": "^0.22.0",
     "react-native-image-picker": "^0.28.0",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-material-menu": "^0.4.2",
+    "react-native-material-textfield": "^0.12.0",
     "react-native-pure-chart": "0.0.24",
     "react-native-range-slider": "^0.1.1",
     "react-native-responsive-dimensions": "^2.0.1",
