Added recorder and upload of sound in AnalyzeWithoutVideo

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-sound')
+    compile project(':react-native-audio')
+    compile project(':react-native-audio-recorder-player')
     compile project(':react-native-svg')
     compile project(':react-native-image-crop-picker')
     compile project(':react-native-image-picker')
