--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apisauce": "^1.0.2",
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
+    "buffer": "^5.2.1",
     "d3-scale": "^2.2.2",
     "d3-shape": "^1.3.4",
     "expo": "^32.0.2",
@@ -18,6 +19,8 @@
     "parse": "^2.1.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-audio": "^4.3.0",
+    "react-native-audio-recorder-player": "^2.1.2",
     "react-native-aws3": "0.0.8",
     "react-native-axios": "^0.17.1",
     "react-native-camera-roll-picker": "^1.2.3",
@@ -35,6 +38,7 @@
     "react-native-responsive-fontsize": "^0.1.6",
     "react-native-responsive-screen": "^1.1.10",
     "react-native-responsive-ui": "^1.1.1",
+    "react-native-sound": "^0.10.12",
     "react-native-svg-charts": "^5.2.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.5",
