--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^1.0.0",
+    "@react-native-community/slider": "^1.0.1",
     "apisauce": "^1.0.2",
     "axios": "^0.18.0",
     "base-64": "^0.1.0",
