--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "native-base": "^2.10.0",
     "parse": "^2.1.0",
     "react": "16.6.3",
+    "react-input-mask": "^2.0.4",
     "react-native": "0.57.8",
     "react-native-audio": "^4.3.0",
     "react-native-audio-recorder-player": "^2.1.2",
@@ -30,6 +31,7 @@
     "react-native-gesture-handler": "1.0.10",
     "react-native-image-crop-picker": "^0.22.0",
     "react-native-image-picker": "^0.28.0",
+    "react-native-masked-text": "^1.11.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-menu": "^0.4.2",
     "react-native-material-textfield": "^0.12.0",
