--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3-scale": "^2.2.2",
     "d3-shape": "^1.3.4",
     "expo": "^32.0.2",
+    "formik": "^1.5.2",
     "native-base": "^2.10.0",
     "parse": "^2.1.0",
     "react": "16.6.3",
